<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="70dp"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    android:paddingBottom="30dp"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/Farmacia"
        app:autoSizeTextType="uniform"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="20dp"/>

    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/Registro"
        app:autoSizeTextType="uniform"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="140dp"/>

    <ImageView
        android:id="@+id/Icono"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/icono"/>

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:hint="@string/hintcorreo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/hintcontra"
        android:inputType="textPassword"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/registro"/>

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Ya tienes una cuenta?"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/btnRegister"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/noAccountText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/inicio"/>

</RelativeLayout>
